--- a/builder.html
+++ b/builder.html
@@ -83,7 +83,7 @@
 						</header>
 						<section class="wrapper style5" style="padding: 2em 0 3em 0;">
 							<div class="inner" style="padding: 0 2em 0 2em;">
-								<p>Les promoteurs de Condos Cité-Avenir-Laval ont mandaté M2 Construction inc. avec la construction de ce projet.</p>
+								<p>Les promoteurs de Cité-Avenir-Laval ont mandaté M2 Construction inc. avec la construction de ce projet.</p>
 								<p>M2 Construction inc. est une entreprise familiale avec plus de 35 ans d’expérience dans les domaines de la Construction de Bâtiment, Développement de projets et Gérance de projets, en ayant dirigé et supervisé la construction de plusieurs maisons de prestige, bâtiments multifamiliales, ainsi que des projets de maisons de ville et condominiums dans la Grande Région de Montréal.</p>
 								<a href="http://www.m2construction.ca/" style="margin-left: auto; margin-right: auto; margin-bottom: 0px; margin-top: 25px;" class="button fit special">m2construction.ca</a>
 							</div>
