--- a/neighborhood.html
+++ b/neighborhood.html
@@ -135,7 +135,7 @@
 							<div class="displaySmall2" style="display: none; overflow-x: hidden;">
 								<section style="background-color:  #4591c5">
 									<div style="padding: 30px 10px 40px 10px">
-										<h4 style="font-weight: 600;">Condos Cité-Avenir-Laval est au cœur de toute l’action du Centre-Ville de Laval.</h4>
+										<h4 style="font-weight: 600;">Cité-Avenir-Laval est au cœur de toute l’action du Centre-Ville de Laval. </h4>
 									</div>
 									<div style="background-color: #87c45d;">
 										<center><img class="imageSmall" style="width: 100%; height: auto;" src="images/NEIGHBORHOOD place bell.jpg" alt="" /></center>
@@ -144,7 +144,7 @@
 			
 								<section style="background-color: #87c45d;">
 									<div style="padding: 40px 10px 40px 10px">
-										<h4 style="font-weight: 600;">Réjouissez de la vie urbaine avec la quiétude de votre quartier résidentiel.</h4>
+										<h4 style="font-weight: 600;">Réjouissez de la vie urbaine avec la quiétude de votre quartier résidentiel. </h4>
 									</div>
 									<div style="background-color:#4591c5;">
 										<img style="width: 100%; height: auto;" src="images/NEIGHBORDHOOD metro.jpg" alt="" />
@@ -153,7 +153,7 @@
 
 								<section style="background-color:  #4591c5">
 									<div style="padding: 40px 10px 40px 10px">
-										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité-Avenir-Laval est à proximité de tout dont vous recherchez; que ça soit le travail, loisir, transit, divertissement, nightlife, enseignement, magasinage.</h4>
+										<h4 class="paddingRequire" style="font-weight: 600;">Cité-Avenir-Laval est à proximité de tout dont vous recherchez; que ça soit le travail, loisir, transit, divertissement, nightlife, enseignement, magasinage.</h4>
 									</div>
 									<div style="background-color: #FFF;">
 										<img class="imageSmall" style="width: 100%; height: auto;" src="images/NEIGHBORHOOD centropolis.jpg" alt="" />
@@ -182,7 +182,7 @@
 												<td width="50%" style="text-align: center;">Éspace Montmorency</td>
 											</tr>
 											<tr>
-												<td width="50%" style="text-align: center;">Collège Montmorency</td>
+												<td width="50%" style="text-align: center;">Carrefour Laval</td>
 												<td width="50%" style="text-align: center;">Centropolis Laval</td>
 											</tr>
 											<tr>
@@ -194,8 +194,12 @@
 												<td width="50%" style="text-align: center;">Quartier Laval</td>
 											</tr>
 											<tr>
-												<td width="50%" style="text-align: center;">Carrefour Laval / Costco</td>
+												<td width="50%" style="text-align: center;">Collège Montmorency</td>
 												<td width="50%" style="text-align: center;">Université de Montréal Campus Laval</td>
+											</tr>
+											<tr>
+												<td width="50%" style="text-align: center;">Costco</td>
+												<td width="50%" style="text-align: center;"></td>
 											</tr>
 										</tbody>
 									</table>
