--- a/project.html
+++ b/project.html
@@ -105,7 +105,7 @@
 												<td>Construction de qualité supérieure en bois, béton armé, et acier</td>
 											</tr>
 											<tr>
-												<td>Total de 19 unités spacieux avec une fenestration abondante et plafonds 9 pieds de hauteur</td>
+												<td>Total de 20 unités spacieux avec une fenestration abondante et plafonds 9 pieds de hauteur</td>
 											</tr>
 											<tr>
 												<td>Ascenseur</td>
@@ -129,13 +129,22 @@
 												<td>Rangement pour vélos intérieurs et extérieurs</td>
 											</tr>
 											<tr>
-												<td>Salle d’entreposage de pneus au sous-sol</td>
-											</tr>
-											<tr>
-												<td>Bornes de chargement pour les voitures électriques</td>
-											</tr>
-											<tr>
 												<td>Toit Terrasse commun avec mobilier de jardin contemporain</td>
+											</tr>
+											<tr>
+												<td>Revêtements de plancher en céramique et vinyle de qualité supérieur</td>
+											</tr>
+											<tr>
+												<td>Cuisines et vanités de salle de bains ultra modernes</td>
+											</tr>
+											<tr>
+												<td>Immeuble sécuritaire avec caméras de surveillance</td>
+											</tr>
+											<tr>
+												<td>5 appareils électroménagers inclus</td>
+											</tr>
+											<tr>
+												<td>Luminaires inclus</td>
 											</tr>
 										</tbody>
 									</table>
