--- a/en-neighborhood.html
+++ b/en-neighborhood.html
@@ -125,7 +125,7 @@
 										<img src="images/NEIGHBORDHOOD metro.jpg" alt="" />
 									</div>
 									<div class="content">
-										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité-Avenir-Laval is nearby to all your needs; whether it be for work, leisure, transit, entertainment, nightlife, schools, shopping.</h4>
+										<h4 class="paddingRequire" style="font-weight: 600;">Cité-Avenir-Laval is near to whatever you’re looking for; whether it be work, leisure, transit, entertainment, nightlife, Schools, shopping…</h4>
 									</div>
 								</section>
 							<div>
@@ -182,7 +182,7 @@
 												<td width="50%" style="text-align: center;">Éspace Montmorency</td>
 											</tr>
 											<tr>
-												<td width="50%" style="text-align: center;">Collège Montmorency</td>
+												<td width="50%" style="text-align: center;">Carrefour Laval</td>
 												<td width="50%" style="text-align: center;">Centropolis Laval</td>
 											</tr>
 											<tr>
@@ -194,8 +194,12 @@
 												<td width="50%" style="text-align: center;">Quartier Laval</td>
 											</tr>
 											<tr>
-												<td width="50%" style="text-align: center;">Carrefour Laval / Costco</td>
+												<td width="50%" style="text-align: center;">Collège Montmorency</td>
 												<td width="50%" style="text-align: center;">Université de Montréal Campus Laval</td>
+											</tr>
+											<tr>
+												<td width="50%" style="text-align: center;">Costco</td>
+												<td width="50%" style="text-align: center;"></td>
 											</tr>
 										</tbody>
 									</table>
