--- a/en-project.html
+++ b/en-project.html
@@ -96,7 +96,7 @@
 												<td>Exceptional location in the heart of Downtown Laval</td>
 											</tr>
 											<tr>
-												<td>4 storey building</td>
+												<td>4 story building</td>
 											</tr>
 											<tr>
 												<td>Modern design and architecture</td>
@@ -105,7 +105,7 @@
 												<td>Superior quality wood, reinforced concrete, and steel construction</td>
 											</tr>
 											<tr>
-												<td>Total of 19 spacious units with generous  windows and 9 foot ceiling height </td>
+												<td>Total of 20 spacious units with generous  windows and 9 foot ceiling height </td>
 											</tr>
 											<tr>
 												<td>Private balcony for each unit</td>
@@ -129,13 +129,22 @@
 												<td>Interior and exterior bicycle racks</td>
 											</tr>
 											<tr>
-												<td>Tire storage room in basement</td>
-											</tr>
-											<tr>
-												<td>Electric vehicle charger</td>
-											</tr>
-											<tr>
 												<td>Rooftop terrace with contemporary garden furniture</td>
+											</tr>
+											<tr>
+												<td>High quality ceramic and vinyl floor coverings</td>
+											</tr>
+											<tr>
+												<td>Ultra modern kitchen and bathroom vanities</td>
+											</tr>
+											<tr>
+												<td>Surveillance cameras throughout the building</td>
+											</tr>
+											<tr>
+												<td>5 home appliances included</td>
+											</tr>
+											<tr>
+												<td>Light fixtures included</td>
 											</tr>
 										</tbody>
 									</table>
