--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 								<img class="imageDisappear" src="images/HOME CHILDREN JUMPING.jpg" alt="" />
 							</div>
 							<div class="content">
-								<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité-Avenir-Laval vous offre des condos abordables dans le cœur du Centre-Ville de Laval</h4>
+								<h4 class="paddingRequire" style="font-weight: 600;">Cité-Avenir-Laval vous offre des condos locatifs abordables dans le coeur du Centre-Ville de Laval</h4>
 							</div>
 						</section>
 
@@ -120,7 +120,7 @@
 								<img src="images/HOME COUPLES FINGERS TATTOO.jpg" alt="" />
 							</div>
 							<div class="content">
-								<h4 style="font-weight: 600;">À quelques pas du Metro Montmorency, et des Autoroutes 440 et 15. Des unités avec une, deux, ou trois chambres sont disponibles.</h4>
+								<h4 style="font-weight: 600;">, à quelques pas du Metro Montmorency, et des Autoroutes 440 et 15. Des unités avec une ou deux chambres sont disponibles.</h4>
 								<a href="project.html" style="width: 250px; margin-left: auto; margin-right: auto; margin-top: 25px;" class="button fit special">Projet</a>
 							</div>
 						</section>
