--- a/floor1.html
+++ b/floor1.html
@@ -75,12 +75,14 @@
             <div class="displayBig">
                 <center>
                     <img class="map" style="width: 835px; height: 645px;" src="plans/PLAN ETAGE 1-1.png" usemap="#image-map">
+                    <!-- <img src="plans/PLAN ETAGE 1-1.png" usemap="#image-map"> -->
 
                     <map name="image-map">
-                        <area target="_self" alt="Unit 101" title="Unit 101" href="unit101.html" coords="101,411,319,411,319,331,396,332,398,237,100,235" shape="poly">
-                        <area target="_self" alt="Unit 102" title="Unit 102" href="unit102.html" coords="101,64,101,235,398,236,399,159,361,157,360,61" shape="poly">
-                        <area target="_self" alt="Unit 103" title="Unit 103" href="unit103.html" coords="453,62,701,64,702,311,503,312,502,255,435,255,435,173,453,172,453,117" shape="poly">
-                        <area target="_self" alt="Unit 104" title="Unit 104" href="unit104.html" coords="478,509,626,546,627,485,700,483,700,310,502,311,501,254,434,255,434,332,453,333,455,348,479,349" shape="poly">
+                        <area target="_self" alt="Unit 101" title="Unit 101" href="unit101.html" coords="87,414,88,224,408,224,408,330,326,329,325,397,296,397,296,413" shape="poly">
+                        <area target="_self" alt="Unit 102" title="Unit 102" href="unit102.html" coords="88,36,365,35,365,140,406,142,407,222,88,221" shape="poly">
+                        <area target="_self" alt="Unit 103" title="Unit 103" href="unit103.html" coords="468,35,735,36,735,211,568,210,568,241,502,243,501,222,450,221,454,157,468,156" shape="poly">
+                        <area target="_self" alt="Unit 104" title="Unit 104" href="unit104.html" coords="736,210,735,389,640,389,639,369,566,367,565,334,497,333,496,317,475,317,473,311,450,309,450,220,501,222,502,243,568,241,568,211" shape="poly">
+                        <area target="_self" alt="Unit 105" title="Unit 105" href="unit105.html" coords="495,412,496,518,656,561,657,502,736,500,736,391,639,389,639,367,566,368,565,334,498,333,496,342,471,342,471,411" shape="poly">
                     </map>
                 </center>
             </div>
