--- a/plans.html
+++ b/plans.html
@@ -93,16 +93,21 @@
                     <img class="map" style="width: 835px; height: 540px;" src="images/banner.jpg" usemap="#image-map">
 
                     <map name="image-map">
-                        <area target="_self" alt="Floor 4" title="Floor 4" href="floor4.html" coords="114,285,253,241,332,249,332,253,416,266,447,259,522,271,537,265,583,273,598,268,706,280,707,218,597,207,584,211,584,187,619,192,623,179,556,160,547,161,533,159,525,161,526,176,539,172,584,186,584,210,538,200,522,206,446,190,416,199,332,182,332,177,250,167,113,229" shape="poly">
-                        <area target="_self" alt="Floor 3" title="Floor 3" href="floor3.html" coords="114,342,251,319,332,322,332,326,415,331,446,328,521,334,537,331,584,336,597,334,707,339,707,279,598,268,583,271,538,265,521,270,446,259,415,265,331,254,331,249,251,241,114,286" shape="poly">
-                        <area target="_self" alt="Floor 2" title="Floor 2" href="floor2.html" coords="114,397,251,398,334,394,415,397,446,395,582,399,598,397,707,396,707,340,596,334,583,336,538,330,521,334,446,328,416,331,332,327,332,324,251,319,113,341" shape="poly">
-                        <area target="_self" alt="Floor 1" title="Floor 1" href="floor1.html" coords="114,435,248,459,416,448,443,453,578,445,597,449,705,446,705,395,597,397,582,398,446,395,416,397,332,393,250,398,114,397" shape="poly">
+                        <area target="_self" alt="Floor 1" title="Floor 1" href="floor1.html" coords="107,406,249,406,415,405,469,403,614,406,709,405,708,449,467,455,415,448,249,461,105,452" shape="poly">
+                        <area target="_self" alt="Floor 2" title="Floor 2" href="floor2.html" coords="112,345,249,327,415,337,467,336,522,339,612,339,709,345,709,405,610,404,466,402,415,405,250,403,110,406" shape="poly">
+                        <area target="_self" alt="Floor 3" title="Floor 3" href="floor3.html" coords="115,291,249,250,416,272,467,268,522,274,583,279,612,278,706,284,707,346,609,339,523,338,466,335,415,336,251,327,114,344" shape="poly">
+                        <area target="_self" alt="Floor 4" title="Floor 4" href="floor4.html" coords="115,236,251,174,416,206,468,201,524,213,614,216,707,227,708,286,610,278,521,275,467,268,415,271,250,250,114,291" shape="poly">
                     </map>
-
                     <hr>
 
                     <a href="images/banner2.jpg">
                         <img class="map" style="display: block; margin-left: auto; margin-right: auto; max-width: 1000px; width: 95%; height: auto;" src="images/banner2.jpg">
+                    </a>
+
+                    <hr>
+
+                    <a href="images/banner3.jpg">
+                        <img class="map" style="display: block; margin-left: auto; margin-right: auto; max-width: 1000px; width: 95%; height: auto;" src="images/banner3.jpg">
                     </a>
                 </center>
             </div>
@@ -135,6 +140,12 @@
 
                     <a href="images/banner2.jpg">
                         <img class="map" style="display: block; margin-left: auto; margin-right: auto; max-width: 1000px; width: 95%; height: auto;" src="images/banner2.jpg">
+                    </a>
+
+                    <hr>
+
+                    <a href="images/banner3.jpg">
+                        <img class="map" style="display: block; margin-left: auto; margin-right: auto; max-width: 1000px; width: 95%; height: auto;" src="images/banner3.jpg">
                     </a>
                     </center>
                 </div>
