--- a/en-plans.html
+++ b/en-plans.html
@@ -31,7 +31,7 @@
 </style>
 
 <head>
-    <title>Condos Cité Avenir Laval</title>
+    <title>Cité-Avenir-Laval</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -54,7 +54,7 @@
 
     <header id="header">
         <img class="logoSmall" style="height: 40px; max-width: 40px; margin-left:  0.75em; margin-top: 3px;" src="images/logo-small.png">
-        <h1 style="padding-left: 45px;"><a href="en-index.html">Condos Cité-Avenir-Laval</a></h1>
+        <h1 style="padding-left: 45px;"><a href="en-index.html">Cité-Avenir-Laval</a></h1>
         <nav id="nav">
             <ul>
                 <li>
@@ -170,7 +170,7 @@
 
     <footer id="footer" style="padding: 2em 0 0.5em 0;">
         <ul class="copyright">
-            <li>&copy; Condos Cité Avenir Laval</li>
+            <li>&copy; Cité-Avenir-Laval</li>
             <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
             <li><a href="en-contact.html" style="font-size: 3em; padding-left: 9px;" class="icon fa-envelope-o"><span class="label">Email</span></a>
             <a href="http://facebook.com" style="font-size: 2.6em; padding-left: 7px;" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
