--- a/neighborhood.html
+++ b/neighborhood.html
@@ -53,7 +53,7 @@
 		}
 	</style>
 	<head>
-		<title>Condos Cité Avenir Laval</title>
+		<title>Cité-Avenir-Laval</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -70,7 +70,7 @@
 				<!-- Header -->
 					<header id="header">
 						<img class="logoSmall" style="height: 40px; max-width: 40px; margin-left: 0.75em; margin-top: 3px;" src="images/logo-small.png">
-						<h1 style="padding-left: 45px;"><a href="index.html">Condos Cité-Avenir-Laval</a></h1>
+						<h1 style="padding-left: 45px;"><a href="index.html">Cité-Avenir-Laval</a></h1>
 						<nav id="nav">
 							<ul>
 								<li>
@@ -107,7 +107,7 @@
 										<img src="images/NEIGHBORHOOD place bell.jpg" alt="" />
 									</div>
 									<div class="content">
-										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité-Avenir-Laval est au cœur de toute l’action du Centre-Ville de Laval.</h4>
+										<h4 class="paddingRequire" style="font-weight: 600;">Cité-Avenir-Laval est au cœur de toute l’action du Centre-Ville de Laval.</h4>
 									</div>
 								</section>
 		
@@ -125,7 +125,7 @@
 										<img src="images/NEIGHBORDHOOD metro.jpg" alt="" />
 									</div>
 									<div class="content">
-										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité-Avenir-Laval est à proximité de tout dont vous recherchez; que ça soit le travail, loisir, transit, divertissement, nightlife, enseignement, magasinage.</h4>
+										<h4 class="paddingRequire" style="font-weight: 600;">Cité-Avenir-Laval est à proximité de tout dont vous recherchez; que ça soit le travail, loisir, transit, divertissement, nightlife, enseignement, magasinage.</h4>
 									</div>
 								</section>
 							<div>
@@ -207,7 +207,7 @@
 
 								<hr>
 
-								<p>Profitez de la Ligne 360! Le service de transport gratuit qui boucle autour du Centre-Ville de Laval. Condos Cité-Avenir-Laval est à quelques pas de l’arrêt Du Souvenir / De L’avenir.</p>
+								<p>Profitez de la Ligne 360! Le service de transport gratuit qui boucle autour du Centre-Ville de Laval. Cité-Avenir-Laval est à quelques pas de l’arrêt Du Souvenir / De L’avenir.</p>
 								<a href="http://ligne360.com" style="max-width: 350px; margin-left: auto; margin-right: auto; margin-bottom: 20px; margin-top: 25px;" class="button fit special">www.ligne360.com</a>
 
 							</div>
@@ -222,7 +222,7 @@
 				<!-- Footer -->
 				<footer id="footer" style="padding: 2em 0 0.5em 0;">
 					<ul class="copyright">
-						<li>&copy; Condos Cité Avenir Laval</li>
+						<li>&copy; Cité-Avenir-Laval</li>
 						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						<li><a href="contact.html" style="font-size: 3em; padding-left: 9px;" class="icon fa-envelope-o"><span class="label">Email</span></a>
 						<a href="http://facebook.com" style="font-size: 2.6em; padding-left: 7px;" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
