--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	</style>
 
 	<head>
-		<title>Condos Cité Avenir Laval</title>
+		<title>Cité-Avenir-Laval</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -68,7 +68,7 @@
 				<!-- Header -->
 					<header id="header">
 						<img class="logoSmall" style="height: 40px; max-width: 40px; margin-left: 0.75em; margin-top: 3px;" src="images/logo-small.png">
-						<h1 style="padding-left: 45px;"><a href="index.html">Condos Cité-Avenir-Laval</a></h1>
+						<h1 style="padding-left: 45px;"><a href="index.html">Cité-Avenir-Laval</a></h1>
 						<nav id="nav">
 							<ul>
 								<li>
@@ -120,7 +120,7 @@
 								<img src="images/HOME COUPLES FINGERS TATTOO.jpg" alt="" />
 							</div>
 							<div class="content">
-								<h4 style="font-weight: 600;">, à quelques pas du Metro Montmorency, et des Autoroutes 440 et 15. Des unités avec une ou deux chambres sont disponibles.</h4>
+								<h4 style="font-weight: 600;">à quelques pas du Metro Montmorency, et des Autoroutes 440 et 15. Des unités avec une ou deux chambres sont disponibles.</h4>
 								<a href="project.html" style="width: 250px; margin-left: auto; margin-right: auto; margin-top: 25px;" class="button fit special">Projet</a>
 							</div>
 						</section>
@@ -128,7 +128,7 @@
 
 					<footer id="footer" style="padding: 2em 0 0.5em 0;">
 						<ul class="copyright">
-							<li>&copy; Condos Cité Avenir Laval</li>
+							<li>&copy; Cité-Avenir-Laval</li>
 							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							<li><a href="contact.html" style="font-size: 3em; padding-left: 9px;" class="icon fa-envelope-o"><span class="label">Email</span></a>
 							<a href="http://facebook.com" style="font-size: 2.6em; padding-left: 7px;" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -142,7 +142,7 @@
 				<div class="displaySmall2" style="display: none; overflow-x: hidden;">
 					<section style="background-color:  #4591c5">
 						<div style="padding: 40px 10px 40px 10px">
-							<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité-Avenir-Laval vous offre des condos abordables dans le cœur du Centre-Ville de Laval</h4>
+							<h4 class="paddingRequire" style="font-weight: 600;">Cité-Avenir-Laval vous offre des condos abordables dans le cœur du Centre-Ville de Laval</h4>
 						</div>
 						<div style="background-color: #87c45d;">
 							<center><img class="imageSmall" style="width: 100%; height: auto;" src="images/HOME CHILDREN JUMPING.jpg" alt="" /></center>
@@ -162,7 +162,7 @@
 
 				<footer id="footer" style="padding: 2em 0 0.5em 0;">
 					<ul class="copyright">
-						<li>&copy; Condos Cité Avenir Laval</li>
+						<li>&copy; Cité-Avenir-Laval</li>
 						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						<li><a href="contact.html" style="font-size: 3em; padding-left: 9px;" class="icon fa-envelope-o"><span class="label">Email</span></a>
 						<a href="http://facebook.com" style="font-size: 2.6em; padding-left: 7px;" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
