--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 								<img class="imageDisappear" src="images/HOME CHILDREN JUMPING.jpg" alt="" />
 							</div>
 							<div class="content">
-								<h4 class="paddingRequire" style="font-weight: 600;">Cité-Avenir-Laval vous offre des condos locatifs abordables dans le coeur du Centre-Ville de Laval</h4>
+								<h4 class="paddingRequire" style="font-weight: 600;">Cité-Avenir-Laval vous offre des condos locatifs abordables dans le coeur du Centre-Ville de Laval.</h4>
 							</div>
 						</section>
 
