--- a/builder.html
+++ b/builder.html
@@ -103,10 +103,10 @@
 
 						</section>
 
-						<section id="one" class="wrapper style1 special" style="padding: 1em 3em 0.5em 3em; background-color: #2e3842;">
+						<section id="one" class="wrapper style1 special" style="padding: 1em 3em 0.5em 3em; background-color:  white;">
 							<div class="inner">
 									<header>
-											<img src="images/M2logo.png" alt="" style="background-color: #2e3842; padding: 5px; display: block; margin-left: auto; margin-right: auto; max-width: 250px; width: 95%; height: auto;"/>
+											<img src="images/M2logo.png" alt="" style="background-color: white; padding: 5px; display: block; margin-left: auto; margin-right: auto; max-width: 250px; width: 95%; height: auto;"/>
 										</header>
 							</div>
 						</section>
